<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="16dp">
        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/textColor.Day.Bold"
            android:text="@string/hello_bestie"
            android:textSize="26sp"
            android:textAlignment="center"
            android:paddingVertical="4dp"
            android:alpha="0"/>
        <TextView
            android:id="@+id/sub_header_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/textColor.Day.Light"
            android:text="@string/discover"
            android:textSize="18sp"
            android:textAlignment="center"
            android:paddingVertical="2dp"
            android:alpha="0"/>
    </LinearLayout>

    <bpai.dicoding.storyapss.component.MyTextInput
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/bg_form"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003"
        android:alpha="0"/>

    <bpai.dicoding.storyapss.component.MyTextInput
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:background="@drawable/bg_form"
        android:alpha="0"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        style="@style/StoryApss.Button.Filled"
        android:alpha="0"/>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        style="@style/textColor.Day.Regular"
        android:alpha="0"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_story_app"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        style="@style/StoryApss.Button.Outline"
        android:alpha="0"/>

</androidx.constraintlayout.widget.ConstraintLayout>